# KinectFusionApp

./: CMakeLists.txt
KinectFusionApp/: CMakeLists.txt  config.toml
KinectFusionApp/include/: depth_camera.h
KinectFusionApp/src/: depth_camera.cpp  main.cpp
